# pucky

./: .gitignore  CLAUDE.md  README.md  project.yml
Pucky.xcodeproj/: project.pbxproj
Pucky.xcodeproj/xcshareddata/xcschemes/: Pucky.xcscheme
Pucky/Sources/App/: AppState.swift  PuckyApp.swift
Pucky/Sources/Bridging/: Pucky-Bridging-Header.h
Pucky/Sources/Components/: SyntaxHighlighter.swift
Pucky/Sources/Design/: DesignSystem.swift  DynamicIsland.swift  IslandRope.swift
Pucky/Sources/Models/: BuildError.swift  ChatHistoryRenderer.swift  ChatMessage.swift  FilePatch.swift  LogEntry.swift  ProjectFile.swift  ProjectScaffold.swift  ProjectTemplate.swift
Pucky/Sources/Screens/: MainNavigationView.swift  OnboardingView.swift
Pucky/Sources/Screens/Chat/: ChatBubble.swift  ChatScreen.swift
Pucky/Sources/Screens/Code/: CodeScreen.swift
Pucky/Sources/Screens/Preview/: PreviewScreen.swift
Pucky/Sources/Services/: Gemma4Runtime.swift  Gemma4Tooling.swift  Gemma4Variant.swift  MemoryProbe.swift  ModelService.swift  OrchestrationService.swift  OxcBridge.swift  PreviewRuntime.swift  PreviewService.swift  ProjectService.swift  PuckyLog.swift  TransformService.swift
PuckyTests/: PuckyTests.swift
PuckyUITests/: PuckyUITests.swift
rust/oxc-bridge/: Cargo.toml  build-ios.sh  build.rs  cbindgen.toml
rust/oxc-bridge/OxcBridge.xcframework/: Info.plist
rust/oxc-bridge/OxcBridge.xcframework/ios-arm64-simulator/Headers/: oxc_bridge.h
rust/oxc-bridge/src/: lib.rs
